--- a/formularze.html
+++ b/formularze.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=true">
   <title>Budowa formularzy</title>
   <link rel="stylesheet" href="CSS/style.css" type="text/css">
+  <script src="JS/walidacja.js" ></script>
 </head>
 <body>
 <div id="kontener">
@@ -37,21 +38,24 @@
       </ul>
 
       <h3>Przykładowy formularz HTML:</h3>
-      <form method="post">
+      <form method="post" action="mailto:xxx@xxx.xx" onsubmit="return sprawdz()" >
         <table>
           <tr>
             <td>Nazwisko:</td>
-            <td><input type="text" id="nazwisko" name="nazwisko" pattern="^([ \u00c0-\u01ffa-zA-Z'\-])+$" required>
-              <label for="nazwisko"></label><br></td>
+            <td><input type="text" id="nazw" name="nazw" >
+              <label for="nazw"></label><br></td>
+            <td id="nazw_error" class="czerwone"></td>
           </tr>
           <tr>
             <td>Wiek:</td>
-            <td><input type="text" id="wiek" name="wiek" pattern="[0-1]{1}[0-9]{0,2}" required>
+            <td><input type="text" id="wiek" name="wiek" >
               <label for="wiek"></label><br></td>
+            <td id="wiek_error" class="czerwone"></td>
           </tr>
           <tr>
             <td>Adres e-mail</td>
             <td><input type="email" id="email" name="email"><label for="email"></label><br></td>
+            <td id="email_error" class="czerwone"></td>
           </tr>
           <tr>
             <td>Państwo:</td>
@@ -67,17 +71,19 @@
         <div class="flex-form">
           <div class="flex-item"><input type="checkbox" id="php" name="php" value="php"><label for="php">PHP</label></div>
           <div class="flex-item"><input type="checkbox" id="c" name="C" value="C"><label for="c">C/C++</label></div>
-          <div><input type="checkbox" id="java" name="java" value="java"><label for="java">Java</label></div>
+          <div class="flex-item"><input type="checkbox" id="java" name="java" value="java"><label for="java">Java</label></div>
+          <span id="produkt_error" class="czerwone"></span></p>
         </div>
         <h4>Sposób zapłaty:</h4>
         <div class="flex-form">
-          <div class="flex-item"><input type="radio" id="eurocard" name="platnosc" value="eurocard"><label for="eurocard">Eurocard</label></div>
-          <div class="flex-item"><input type="radio" id="visa" name="platnosc" value="visa"><label for="visa">Visa</label></div>
-          <div class="flex-item"><input type="radio" id="przelew" name="platnosc" value="przelew"><label for="przelew">Przelew bankowy</label></div>
+          <div class="flex-item"><input type="radio" id="eurocard" name="zaplata" value="eurocard"><label for="eurocard">Eurocard</label></div>
+          <div class="flex-item"><input type="radio" id="visa" name="zaplata" value="visa"><label for="visa">Visa</label></div>
+          <div class="flex-item"><input type="radio" id="przelew" name="zaplata" value="przelew"><label for="przelew">Przelew bankowy</label></div>
+          <span id="zaplata_error" class="czerwone"></span><br />
         </div>
         <br>
         <div class="flex-buttons">
-          <input type="submit" value="Wyślij">
+          <input type="submit" value="Wyślij" onsubmit="">
           <input type="reset" value="Anuluj">
         </div>
         <br><br>
